Synchronize drag point views with drag point view models inside arc view.